--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" href="#">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smile fundacion</title>
+    <title id="tituloWeb">Fundacion Smile</title>
+    <link rel="stylesheet" href="/css/styles.css">
+
 </head>
+
 <body>
-    
+    <nav class="nav">
+        <div class ="menu">
+            <div id="menuColor1"></div>
+            <div id="menuColor2"></div>
+            <div id="menuColor3"></div>
+            <div id="menuColor4"></div>
+        </div>
+        <div id="menu_letra">
+            MENU
+        </div>
+    </nav>
+    <div id="wrapper" class="wrapper">
+        
+    </div>
+    <footer>© 2000 - 2023 FUNDACION SMILE. All right reserved.</footer>
 </body>
+<script src="/js/code.js"></script>
+
+
 </html>
