--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,23 +8,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="tituloWeb">Fundacion Smile</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://kit.fontawesome.com/3baeace310.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
     <nav class="nav">
-        <div class ="menu">
-            <div id="menuColor1"></div>
-            <div id="menuColor2"></div>
-            <div id="menuColor3"></div>
-            <div id="menuColor4"></div>
+        <div class="logo">
+            <div id="logo_pequeno"></div>
         </div>
-        <div id="menu_letra">
-            MENU
+        <div class="menu_menu">
+            <div class="menu">
+                <div id="menuColor1"></div>
+                <div id="menuColor2"></div>
+                <div id="menuColor3"></div>
+                <div id="menuColor4"></div>
+            </div>
+            <div id="menu_letra">
+                MENU
+            </div>
         </div>
+        <div class="donate_social">
+            <div id="donate_icon">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+            <div id="donate_letra">
+                DONATE
+            </div>
+
+        </div>
+        <div class="social_network">
+            <i class="fa-brands fa-facebook" style="color: #000000;"></i>
+            <i class="fa-brands fa-instagram" style="color: #000000;"></i>
+        </div>
+
+
+
     </nav>
     <div id="wrapper" class="wrapper">
-        
+        <div class="left">
+            <div class="left_1">
+                <div class="smile_foundation">
+                    <div id="smile_bold_text">
+                        SMILES <br>FOUNDATION
+                    </div>
+                    <div id="smile_regular_text">
+                        a mission trip width a purpose
+                    </div>
+
+                </div>
+            </div>
+            <div class="left_2">
+                <div class="left_text2">
+                    Works in more than 12 countries,
+                    to bring hope and draw smiles to
+                    as many children as possible in
+                    Latin America and the world.
+                </div>
+                <div class="boton_yellow1">
+                    Registration
+                </div>
+
+            </div>
+        </div>
+        <div class="right">
+            <div id="img_1_home"></div>
+        </div>
+    </div>
+
+
     </div>
     <footer>© 2000 - 2023 FUNDACION SMILE. All right reserved.</footer>
 </body>
