--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -74,6 +74,14 @@
         <div class="right">
             <div id="img_1_home"></div>
         </div>
+        <div class="second_part">
+            <div class="second_texto1">
+                A MISION TRIP <br>
+                WITH A PURPOSE!<br>
+                2023
+            </div>
+            
+        </div>
     </div>
 
 
