--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -80,7 +80,27 @@
                 WITH A PURPOSE!<br>
                 2023
             </div>
-            
+            <div class="trip">
+                <div class="trip-left1">
+
+
+                </div>
+                <div class="trip-right1">
+                    <div class="trip-title1">
+                        <div class="trip-text">
+                            Mission Trip | 7 days<br>
+                            <b>Date:</b> JUNE 09-18-2023<br>
+                            <b>Place:</b> SMILE CAMP<br>
+                            <b>Project:</b> Social and emotional<br>
+                            assistance in a rural community.
+
+                            <div></div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
     </div>
 
