se agrego partnerships

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -205,13 +205,25 @@
         <div class="six_part">
             <div class="six_title">SMILES Partnerships</div>
             <div class="partnerships">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <img src="/imgs/partnerships/PARTNERSHIP_001.png" id="partnership01" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_002.png" id="partnership02" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_003.png" id="partnership03" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_004.png" id="partnership04" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_005.png" id="partnership05" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_006.png" id="partnership06" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_007.png" id="partnership07" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_008.png" id="partnership08" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_009.png" id="partnership09" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_010.png" id="partnership10" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_011.png" id="partnership11" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_012.png" id="partnership12" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_013.png" id="partnership13" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_014.png" id="partnership14" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_015.png" id="partnership15" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_016.png" id="partnership16" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_017.png" id="partnership17" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_018.png" id="partnership18" class="partnerships_div"></img>
+                <img src="/imgs/partnerships/PARTNERSHIP_019.png" id="partnership19" class="partnerships_div"></img>
             </div>
             <div class="Partnership_button"></div>
         </div>
