--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -225,7 +225,7 @@
                 <img src="/imgs/partnerships/PARTNERSHIP_018.png" id="partnership18" class="partnerships_div"></img>
                 <img src="/imgs/partnerships/PARTNERSHIP_019.png" id="partnership19" class="partnerships_div"></img>
             </div>
-            <div class="Partnership_button"></div>
+            <div class="Partnership_button">BECOME A PARTNERSHIP</div>
         </div>
     </div>
     </div>
