--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -84,7 +84,7 @@
                 2023
             </div>
             <div class="smile_icon_background"></div>
-            <div class="trip">
+            <div id="trip1" class="trip">
                 <div class="trip-left1">
 
 
@@ -106,7 +106,7 @@
                 </div>
 
             </div>
-            <div class="trip">
+            <div id="trip2" class="trip">
 
                 <div class="trip-right1">
                     <div class="trip-title2">
@@ -129,7 +129,7 @@
                 </div>
 
             </div>
-            <div class="trip">
+            <div id="trip3" class="trip">
                 <div class="trip-left3">
 
 
