--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,20 +13,21 @@
 </head>
 
 <body>
-    <nav class="nav">
-        <div class="logo">
-            <div id="logo_pequeno"></div>
-        </div>
+    <nav class="header">
         <div class="menu_menu">
-            <div class="menu">
-                <div id="menuColor1"></div>
-                <div id="menuColor2"></div>
-                <div id="menuColor3"></div>
-                <div id="menuColor4"></div>
+            <img src="imgs/logo_pequeno.png">
+            <div class="menu_big">
+                <div class="menu">
+                    <div id="menuColor1"></div>
+                    <div id="menuColor2"></div>
+                    <div id="menuColor3"></div>
+                    <div id="menuColor4"></div>
+                </div>
+                <div id="menu_letra">
+                    MENU
+                </div>
             </div>
-            <div id="menu_letra">
-                MENU
-            </div>
+
         </div>
         <div class="donate_social">
             <div id="donate_icon">
@@ -72,9 +73,7 @@
 
                 </div>
             </div>
-            <div class="right">
-                <div id="img_1_home"></div>
-            </div>
+            <img src="imgs/imagen_1_home.png">
         </div>
 
         <div class="second_part">
@@ -85,16 +84,13 @@
             </div>
             <div class="smile_icon_background"></div>
             <div id="trip1" class="trip">
-                <div class="trip-left1">
-
-
-                </div>
+                <img src="imgs/trip1.png">
                 <div class="trip-right1">
                     <div class="trip-title1">
                         HABANA, CUBA
                     </div>
                     <div class="trip-text">
-                        Mission Trip | 7 days<br>
+                        Mission Trip | 7 days <br>
                         <b>Date:</b> JUNE 09-18-2023<br>
                         <b>Place:</b> SMILES CAMP<br>
                         <b>Project:</b> Social and emotional<br>
@@ -102,12 +98,10 @@
                         <div class="learnmore">Learn more...</div>
                         <div class="soldout">SOLD OUT</div>
                     </div>
-
                 </div>
-
             </div>
             <div id="trip2" class="trip">
-
+                <img src="imgs/trip2.png">
                 <div class="trip-right1">
                     <div class="trip-title2">
                         HABANA, CUBA
@@ -121,19 +115,10 @@
                         <div class="learnmore">Learn more...</div>
                         <div class="registration">REGISTRATION</div>
                     </div>
-
                 </div>
-                <div class="trip-left2">
-
-
-                </div>
-
             </div>
             <div id="trip3" class="trip">
-                <div class="trip-left3">
-
-
-                </div>
+                <img src="imgs/trip3.png">
                 <div class="trip-right1">
                     <div class="trip-title3">
                         HABANA, CUBA
@@ -147,18 +132,15 @@
                         <div class="learnmore">Learn more...</div>
                         <div class="registration">REGISTRATION</div>
                     </div>
-
                 </div>
-
             </div>
-
         </div>
-        <div class="third_part">
+        <div class="tercer_part">
             <div class="smile_icon_background2"></div>
-            <div class="part_left">
-                <div class="third_title">BECOME A <br>VOLUNTEER</div>
-                <div class="third_secundary_title">Amazonas, perú</div>
-                <div class="third_datos">
+            <div class="part_text">
+                <div class="tercer_title">BECOME A <br>VOLUNTEER</div>
+                <div class="tercer_secundary_title">Amazonas, perú</div>
+                <div class="tercer_datos">
                     <b>Missionary Trip:</b> 11 months <br>
                     <b>Date:</b> January - November 2023<br>
                     <b>Cost:</b> Round trip Airline Tickets<br>
@@ -166,22 +148,18 @@
                     Sports - Arts and Crafts - English -<br>
                     Health - more.
                 </div>
-                <div class="third_boton">Discover How!</div>
+                <div class="tercer_boton">Discover How!</div>
             </div>
-            <div class="part_right">
-
-            </div>
+            <img src="imgs/imagen_005_home.png">
         </div>
-        <div class="four_part">
-            <div class="left_four">
-
-            </div>
+        <div class="cuarto_part">
+            <img src="imgs/imagen_006_home.png">
             <div class="right_four">
-                <div class="four_title">
+                <div class="cuarto_title">
                     PARTICIPATE & <br>
                     GET INVOLVED
                 </div>
-                <div class="four_text">
+                <div class="cuarto_text">
                     Be a Volunteer,
                     embassador, or
                     a donor, and give
@@ -189,21 +167,21 @@
                     a child to be
                     Successful...
                 </div>
-                <div class="four_button">
+                <div class="cuarto_button">
                     DONATE
                 </div>
             </div>
         </div>
-        <div class="five_part">
-            <div class="five_part_head">
-                <div class="five_part_title">SMILERS<br>GALLERY</div>
-                <div class="five_part_button">SEE MORE</div>
+        <div class="quinta_part">
+            <div class="quinta_part_head">
+                <div class="quinta_part_title">SMILERS<br>GALLERY</div>
+                <div class="quinta_part_button">SEE MORE</div>
             </div>
-            <div class="five_part_photo"></div>
+            <img src="imgs/imagen_007_home.png" class="5_part_photo">
 
         </div>
-        <div class="six_part">
-            <div class="six_title">SMILES Partnerships</div>
+        <div class="footer_big">
+            <div class="">SMILES Partnerships</div>
             <div class="partnerships">
                 <img src="/imgs/partnerships/PARTNERSHIP_001.png" id="partnership01" class="partnerships_div"></img>
                 <img src="/imgs/partnerships/PARTNERSHIP_002.png" id="partnership02" class="partnerships_div"></img>
@@ -228,7 +206,6 @@
             <div class="Partnership_button">BECOME A PARTNERSHIP</div>
         </div>
     </div>
-    </div>
     <footer>
         <div class="top_footer">
             <div class="footer_left">
@@ -236,7 +213,7 @@
                 <a>Travel with a purpose | Register</a>
                 <a>Lead project to impact your community | Register</a>
                 <a>Participate in internacional projects | <br>
-                Missionary - Volunteer | Register</a>
+                    Missionary - Volunteer | Register</a>
             </div>
             <div class="footer_right">
                 <b>Discover More</b>
