--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -181,7 +181,7 @@
 
         </div>
         <div class="footer_big">
-            <div class="">SMILES Partnerships</div>
+            <div class="smiles_partnerships">SMILES Partnerships</div>
             <div class="partnerships">
                 <img src="/imgs/partnerships/PARTNERSHIP_001.png" id="partnership01" class="partnerships_div"></img>
                 <img src="/imgs/partnerships/PARTNERSHIP_002.png" id="partnership02" class="partnerships_div"></img>
